--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
         description: "Which sub folder is being built."
         type: string
     docker:
-      - image: paulvitic/peof-circleci-nodejs:20190826161425
+      - image: paulvitic/peof-circleci-nodejs:20190826180803
     steps:
       - checkout
       - run:
@@ -21,12 +21,27 @@ jobs:
           path: /home/circleci/project/<< parameters.source_root >>/reports
       - store_artifacts:
           path: /home/circleci/project/<< parameters.source_root >>/reports
+
   deploy_to_test_environment:
     description: "Deploy to Heroku test environment"
     parameters:
       source_root:
         description: "Which sub folder is being built."
         type: string
+      heroku_app:
+        description: "Where to deploy"
+        type: string
+      extra_git_push_args:
+        description: "More git push flags (e.g. -f)"
+        default: ""
+        type: string
+    docker:
+      - image: paulvitic/peof-circleci:20190826180524
+    steps:
+      - checkout
+      - run:
+          name: Deploy branch to Heroku
+          command: git push << parameters.extra_git_push_args >> https://heroku:$HEROKU_API_KEY@git.heroku.com/<< parameters.heroku_app >>.git $CIRCLE_BRANCH:master
 
 
   #unit_test_nodejs:
@@ -81,23 +96,6 @@ jobs:
           command: |
             go test -v ./...
 
-  deploy_heroku:
-    description: "Deploy current branch to specified heroku app"
-    parameters:
-      heroku_app:
-        description: "Where to deploy"
-        type: string
-      extra_git_push_args:
-        description: "More git push flags (e.g. -f)"
-        default: ""
-        type: string
-    docker:
-      - image: circleci/node:10-browsers
-    steps:
-      - checkout
-      - run:
-          name: Deploy branch to Heroku
-          command: git push << parameters.extra_git_push_args >> https://heroku:$HEROKU_API_KEY@git.heroku.com/<< parameters.heroku_app >>.git $CIRCLE_BRANCH:master
 
 workflows:
   version: 2
@@ -117,5 +115,12 @@ workflows:
           filters:
             branches:
               only:
-                # run the job only for commit to branches which start with name "organization-ui/"
-                - /framework-ui\/.*/              -
+                - /framework-ui\/.*/
+      - deploy_to_test_environment:
+          source_root: framework-ui
+          filters:
+            branches:
+              only:
+                - /framework-ui\/.*/
+          requires:
+            - code_analysis_nodejs
