--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,7 @@ jobs:
           command: |
             touch ~/.netrc
             echo 'machine git.heroku.com login paul.vitic@gmail.com password xxxxxx' >> ~/.netrc
+            cat ~/.netrc
             git remote add << parameters.heroku_app >> https://git.heroku.com/<< parameters.heroku_app >>.git
             git subtree push --prefix << parameters.source_root >> << parameters.heroku_app >> master
 
