--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
       - run:
           name: Deploy branch to Heroku
           command: |
-            git remote add << parameters.heroku_app >> https://git.heroku.com/<< parameters.heroku_app >>.git
+            git remote add << parameters.heroku_app >> https://paul.vitic@gmail.com:$HEROKU_API_KEY@git.heroku.com/<< parameters.heroku_app >>.git
             git subtree push --prefix << parameters.source_root >> << parameters.heroku_app >> master
 
   #unit_test_nodejs:
