--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,7 @@ jobs:
       - run:
           name: Deploy branch to Heroku
           command: |
-            git remote add << parameters.heroku_app >> https://heroku:$HEROKU_API_KEY@git.heroku.com/<< parameters.heroku_app >>.git
-            git subtree push --prefix << parameters.source_root >> << parameters.heroku_app >> master
+            git subtree push --prefix << parameters.source_root >> https://heroku:$HEROKU_API_KEY@git.heroku.com/<< parameters.heroku_app >>.git master
 
   #unit_test_nodejs:
 
