--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,15 @@ jobs:
     steps:
       - checkout
       # see: https://circleci-public.github.io/pipeline-preview-docs/pipeline_variables_reference.html
-      - run: echo "pull request url is" $CIRCLE_PULL_REQUEST
+      - run:
+          name: Get PR
+          command: |
+            echo $CIRCLE_PULL_REQUEST
+      - run:
+          name: Get PR with another param
+          command: |
+            echo $CI_PULL_REQUEST
+
 
   #unit_test_nodejs:
 
