--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,20 +47,13 @@ jobs:
   deploy_to_staging_environment:
     description: "Deploy to Heroku staging environment"
     docker:
-      - image: paulvitic/peof-circleci:20190827163431
+      - image: paulvitic/peof-circleci:20190827173346
     steps:
       - checkout
       - run:
-          name: Extract GitHub merge message to environment variables
-          command: |
-            parse-github-merge-msg
-            echo 'export GITHUB_PR_USERNAME=$GITHUB_PR_USERNAME' >> $BASH_ENV
-            echo 'export GITHUB_PR_SOURCE_ROOT=$GITHUB_PR_SOURCE_ROOT' >> $BASH_ENV
-            echo 'export GITHUB_PR_ISSUE=$GITHUB_PR_ISSUE' >> $BASH_ENV
-            source $BASH_ENV
-      - run:
           name: Deploy branch to Heroku staging
           command: |
+            source github-merge-msg
             echo $GITHUB_PR_SOURCE_ROOT
             git subtree push --prefix $GITHUB_PR_SOURCE_ROOT 'https://heroku:${HEROKU_API_KEY}@git.heroku.com/${GITHUB_PR_SOURCE_ROOT}-staging.git' master
 
